# aisafe_back

./: .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  DISCLAIMER  LICENSE  Makefile  README.md  mypy.ini  pixi.toml  pyproject.toml  requirements.txt  ruff.toml
aisafe/image/: get_frame.py  high_feat.py
aisafe_xgboost/: README.md  __init__.py  inference.py  pyproject.toml  training.py  utils.py  videos.py
aisafe_xgboost/aisafe_xgboost/: main.py
aisafe_xgboost/models/: model_bruise.ubj  model_info.ubj  model_lab.ubj  model_response.ubj  model_video.ubj  model_xray.ubj  optimal_weights.npy
aisafe_xgboost_one/: README.md  pyproject.toml
aisafe_xgboost_one/aisafe_xgboost_one/: main.py
aisafe_xgboost_two/: pyproject.toml
aisafe_xgboost_two/aisafe_xgboost_two/main.py/: main.py
data/raw/MELD/: README.md
data/raw/iemocap/IEMOCAP_full_release/Session1/dialog/avi/DivX/: Thumbs.db
data/raw/iemocap/IEMOCAP_full_release/Session1/dialog/lab/Ses01_F/: Ses01F_impro02.lab  Ses01F_impro03.lab  Ses01F_impro04.lab  Ses01F_impro05.lab  Ses01F_impro06.lab  Ses01F_impro07.lab  Ses01F_script01_3.lab  Ses01F_script02_1.lab  Ses01F_script03_1.lab  Ses01M_impro02.lab  Ses01M_impro03.lab  Ses01M_impro04.lab  Ses01M_impro05.lab  Ses01M_script01_1.lab  Ses01M_script01_2.lab  Ses01M_script02_1.lab  (+1 more)
docs/roadmap/: devices.md
final_files/: Fractures.CSV  Fractures.xlsx  Medical_examination.xlsx  combined.CSV  combined.xlsx
notebooks/: b1.ipynb  b2.ipynb  process_audio.ipynb  process_faces.ipynb  trial_correct.ipynb  xgboo.ipynb  xgboo2.ipynb  xgboost_first_draft.ipynb
(+272 files in other folders)
