[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aisafe"
version = "0.0.1"
description = "A backend leveraging gradient boosting machines and multimodal neural networks for early detection of child abuse"
authors = [
  { name = "bright-rookie" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["aisafe"]
force_sort_within_sections = true
