[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisafe_xgboost_one"                   # 패키지 이름
version = "0.1.0"                     # 패키지 버전
description = "An ensemble model made by bright-rookie."

readme = "README.md"

# 패키지의 의존성 (필요할 경우 추가)
dependencies = [
    "pandas", 
    "xgboost", 
    "scikit-learn", 
    "numpy", 
    "scipy",                 
]

[project.urls]
repository = "https://github.com/bright-rookie/aisafe_back"
